--- a/base_templates/global/base_search_page.html
+++ b/base_templates/global/base_search_page.html
@@ -10,9 +10,11 @@
     <body>
         {%include 'global/partials/menu.html' %}
         {%include 'global/partials/header.html'%}
+        
 
         <main class="main-content-container">
             {% block content %}{% endblock content %}
+            {%include 'global/partials/search.html'%}
             {% include 'global/partials/pagination.html' %}
         </main>
 
