Button access profile css and footer fixed

--- a/base_templates/global/base_register.html
+++ b/base_templates/global/base_register.html
@@ -13,7 +13,8 @@
         <main class="main-content-container">
             {% block content %}{% endblock content %}
         </main>
-
+        
+        {%include 'global/partials/footer_other_base.html'%}
         <script src="{% static 'global/js/scripts.js' %}"></script>
     </body>
 </html>
