--- a/base_templates/global/base_user.html
+++ b/base_templates/global/base_user.html
@@ -16,10 +16,7 @@
             {% block content %}{% endblock content %}
             {% include 'global/partials/pagination.html' %}
         </main>
-        {% include "global/partials/space.html" %}
-        {% include "global/partials/space.html" %}
-        {% include "global/partials/space.html" %}
-        {%include 'global/partials/footer.html'%}
+        {%include 'global/partials/footer_other_base.html'%}
 
         <script src="{% static 'global/js/scripts.js' %}"></script>
     </body>
