--- a/base_templates/global/base_report.html
+++ b/base_templates/global/base_report.html
@@ -17,5 +17,6 @@
         
         {%include 'global/partials/footer_other_base.html'%}
         <script src="{% static 'global/js/scripts.js' %}"></script>
+       <!-- <script src="{% static 'global/js/loading.js' %}"></script>-->
     </body>
 </html>
