--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -19,7 +19,8 @@
             </main>
 
             {% include 'global/partials/footer.html'%} 
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="{% static 'global/js/scripts.js' %}"></script>
-        <script src="{% static 'global/js/jquery-3.7.1.min.js' %}"></script>
+        
     </body>
 </html>
