IBGE API to states and cities

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -24,5 +24,6 @@
     <script src="{% static 'global/js/scripts.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"></script>
     <script src="{% static 'global/js/mask_form_fields.js' %}"></script>
+    <script src="{% static 'global/js/ibge_city.js' %}"></script>
     
 </html>
